--- a/index.html
+++ b/index.html
@@ -21,20 +21,12 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
-<script>
+    <script>
+      const emoji = ['em-kissing_cat', 'em-pouting_cat', 'em-smile_cat', 'em-smirk_cat', 'em-joy_cat'];
+      for(var i=0;i>emoji.length;i++);
+    </script
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script>
-  var socket = io();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-  });
-</script>
+<script type="text/javascript" src="app.js"></script>
   </body>
 </html>
